// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fret component Fret component boxes type, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="E2"
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component Fret component strings type, snapshot 1`] = `
<styled.div>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component Fret component strings type, snapshot 2`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
  />
</styled.div>
`;

exports[`Fret component Fret component strings type, snapshot 3`] = `
<styled.div>
  <styled.div
    isHighlighted={true}
  >
    <Content
      content="E2"
    />
  </styled.div>
</styled.div>
`;
